@@ -7,16 +7,14 @@
   		<version>0.0.1</version>
   	</parent>
 
-  <artifactId>realmrunner-cli</artifactId>
-  		<version>0.0.2</version>
-  <name>Realm Runner CLI</name>
-  <description>MUD client for a terminal emulator written in Java</description>
+    <artifactId>realmrunner-cli</artifactId>
+  	<version>0.0.2</version>
+    <name>Realm Runner CLI</name>
+    <description>MUD client for a terminal emulator written in Java</description>
 
     <properties>
 		<mainClassName>org.prelle.realmrunner.terminal.MUDClientTerminal</mainClassName>
-		<client.plugin.version>1.0.24</client.plugin.version>
-		<javafx.plugin.version>0.0.8</javafx.plugin.version>
-		<javafx.version>20.0.1</javafx.version>
+		<javafx.version>26.0.2</javafx.version>
 	</properties>
 
     <repositories>
@@ -124,7 +122,7 @@
     			</executions>
 			</plugin>
 
-			<plugin>
+<!--			<plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>${javafx.plugin.version}</version>
@@ -136,7 +134,7 @@
                     </options>
                 </configuration>
             </plugin>
-
+-->
 			<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -182,6 +180,7 @@
                 </modulePaths>
                 <javaOptions>
                     <option>--enable-native-access=ALL-UNNAMED,org.prelle.libterminal.console</option>
+                    <option>-Dglass.platform=headless</option>
                 </javaOptions>
                 <verbose>false</verbose>
             </configuration>
@@ -217,7 +216,7 @@
             </executions>
         </plugin>
 
-            <plugin>
+<!--            <plugin>
                 <groupId>com.gluonhq</groupId>
                 <artifactId>gluonfx-maven-plugin</artifactId>
                 <version>${client.plugin.version}</version>
@@ -231,13 +230,13 @@
                      </resourcesList>
                     <runtimeArgs>
                         <arg>-Dproject.version=${project.version}</arg>
-                        <arg>--enable-native-access=ALL-UNNAMED,org.prelle.libterminal.console</arg>
+                        <arg>enable-native-access=ALL-UNNAMED,org.prelle.libterminal.console</arg>
                     </runtimeArgs>
                     <nativeImageArgs>
                         <arg>-H:IncludeLocales=en,de</arg>
                         <arg>-H:+UnlockExperimentalVMOptions</arg>
                         <arg>-H:+ForeignAPISupport</arg>
-                        <arg>--initialize-at-build-time=com.graphicmud.GMLoggerFinder,com.graphicmud.GMLogger</arg>
+                        <arg>initialize-at-build-time=com.graphicmud.GMLoggerFinder,com.graphicmud.GMLogger</arg>
                         <arg>-H:Features=org.prelle.realmrunner.terminal.FFMFeature</arg>
                     </nativeImageArgs>
                     <attachList>
@@ -246,22 +245,22 @@
                         <description>Terminal MUD client</description>
                         <vendor>Stefan Prelle</vendor>
                         <version>${project.version}</version>
-                        <!-- macOS-->
+                         macOS
                         <macAppCategory>public.app-category.role-playing-games</macAppCategory>
                         <macAppStore>false</macAppStore>
                         <skipSigning>true</skipSigning>
-                        <!-- macOS / iOS-->
+                         macOS / iOS
                         <bundleName>RealmRunner</bundleName>
                         <bundleVersion>${env.GITHUB_RUN_NUMBER}</bundleVersion>
 
-                        <!-- Android-->
+                         Android
                         <appLabel>RealmRunner</appLabel>
                         <versionCode>${env.GITHUB_RUN_NUMBER}</versionCode>
                         <versionName>${project.version}</versionName>
                     </releaseConfiguration>
                 </configuration>
             </plugin>
-
+-->
       </plugins>
 	</build>
 </project>
